# grc_devboard_apps

./: CMakeLists.txt  README.md  readme.md  sdkconfig.defaults
components/mic_reader/: CMakeLists.txt  def.h  i2s_rx_slot.cpp  i2s_rx_slot.h  mic_proc.h  mic_reader.cpp  mic_reader.h
components/nn_model/: nn_model.cpp
components/nn_model/audio_preprocessor/: audio_preprocessor.h
hooks/: pre-commit.sh
main/: CMakeLists.txt  Kconfig.projbuild  git_version.h  idf_component.yml
main/App/: App.cpp  Event.cpp  Status.cpp
main/App/include/: App.hpp  Event.hpp  Status.hpp
main/Hardware/: Button.hpp  DisplaySTDOUT.hpp  I2C.hpp  Lcd.cpp  Led.cpp
main/kws/: VoiceRelay.cpp  kws_event_task.cpp  kws_event_task.h  kws_task.cpp  kws_task.h
main/sed/: SED.cpp  sed_task.cpp  sed_task.h
src/: CMakeLists.txt  git_version.h  idf_component.yml
src/App/: App.cpp  Event.cpp  KWS.cpp  Status.cpp
src/App/include/: App.hpp  Event.hpp  IDisplay.hpp  Status.hpp
src/Hardware/: Button.cpp  Button.hpp  I2C.cpp  Lcd.hpp  Led.cpp
src/KWS/: kws.cpp  kws.h  kws_preprocessor.cpp  kws_preprocessor.h  model.cpp
src/KWS/mfcc/: mfcc.cpp  mfcc.h
src/MicReader/: def.h  i2s_rx_slot.cpp  i2s_rx_slot.h  mic_reader.cpp  mic_reader.h  noise.cpp
